# FtcRobotController

./: .deepsource.toml  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  .project  .travis.yml  ADBWirelessConnect.sh  AlexLimelightFollow.java  AlexLimelightFollowV2.java  AutoEncoder.java  BlueLeftAuto.java  Branch explained  CHANGELOG.md  CODE  CODEOWNERS  CommandFileV1.hexpat  DefaultAuto.java  DemoTeleOp.java  EnergizeV3TeleOp.java  FTC-readme.md  FileDump.java  GIT_Checkin_README.txt  Hanish's Triangle  Help Me  Krishiv's ClawTest  LICENSE  MSM_ADD_Teleopp.java  MainTeleop.java  Match-0-Red-3.txt  MathFunctions.java  Movements.java  Odometry.java  PIDTest.java  Ports.txt  README(Old).md  README.md  ReworkBlueLeftAuto.java  ReworkRobot.java  (+62 more)
EasyOpenCV-master/easyopencv/: .gitignore  CMakeLists.txt  build.gradle
EasyOpenCV-master/easyopencv/src/main/cpp/: camera2_jni.cpp  camera_base_jni.cpp  vuforia_passthrough_jni.cpp  webcam_jni.cpp
EasyOpenCV-master/easyopencv/src/main/cpp/include/: INCLUDES_README  camera2_jni.h
depthnativelib/src/main/cpp/: CMakeLists.txt  depthnativelib.cpp  native-lib.cpp
depthnativelib/src/main/cpp/depthai-core/: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
depthnativelib/src/main/cpp/depthai-core/.github/workflows/: main.workflow.yml  stability.workflow.yml  test.workflow.yml
depthnativelib/src/main/cpp/depthai-core/ci/: check_format.sh  stability_stress_test_combined.sh
depthnativelib/src/main/cpp/depthai-core/cmake/: CMakeRC.cmake  ClangFormat.cmake  ClangTidy.cmake  DepthaiBootloaderDownloader.cmake  DepthaiDownloader.cmake  Flags.cmake  GitCommitHash.cmake  config.hpp.in  depthaiConfig.cmake.in  depthaiDependencies.cmake  target-public-headers.cmake  version.hpp.in
depthnativelib/src/main/cpp/depthai-core/cmake/Depthai/: DepthaiBootloaderConfig.cmake  DepthaiDeviceSideConfig.cmake
depthnativelib/src/main/cpp/depthai-core/cmake/Hunter/: config.cmake
depthnativelib/src/main/cpp/depthai-core/cmake/toolchain/: asan-ubsan.cmake  asan.cmake  custom.cmake.in  pic.cmake  tsan.cmake  ubsan.cmake
depthnativelib/src/main/cpp/depthai-core/docs/: CMakeLists.txt  Doxyfile.in
depthnativelib/src/main/cpp/depthai-core/examples/: CMakeLists.txt
depthnativelib/src/main/cpp/depthai-core/examples/AprilTag/: apriltag.cpp  apriltag_rgb.cpp
depthnativelib/src/main/cpp/depthai-core/examples/ColorCamera/: rgb_camera_control.cpp  rgb_isp_scale.cpp  rgb_preview.cpp  rgb_video.cpp
depthnativelib/src/main/cpp/depthai-core/examples/CrashReport/: crash_report.cpp
depthnativelib/src/main/cpp/depthai-core/examples/EdgeDetector/: edge_detector.cpp
depthnativelib/src/main/cpp/depthai-core/examples/FeatureTracker/: feature_detector.cpp  feature_tracker.cpp
depthnativelib/src/main/cpp/depthai-core/examples/IMU/: imu_firmware_update.cpp  imu_gyroscope_accelerometer.cpp  imu_rotation_vector.cpp
depthnativelib/src/main/cpp/depthai-core/examples/ImageManip/: image_manip_example.cpp  image_manip_rotate.cpp  image_manip_tiling.cpp  image_manip_warp_mesh.cpp  rgb_rotate_warp.cpp
depthnativelib/src/main/cpp/depthai-core/examples/MobileNet/: camera_mobilenet_sync_example.cpp  mono_mobilenet.cpp  rgb_mobilenet.cpp  rgb_mobilenet_4k.cpp  video_mobilenet.cpp  webcam_mobilenet_example.cpp
depthnativelib/src/main/cpp/depthai-core/examples/MonoCamera/: mono_camera_control.cpp  mono_full_resolution_saver.cpp  mono_preview.cpp
depthnativelib/src/main/cpp/depthai-core/examples/NeuralNetwork/: concat_multi_input.cpp  detection_parser.cpp  normalization_multi_input.cpp
depthnativelib/src/main/cpp/depthai-core/examples/ObjectTracker/: object_tracker.cpp  object_tracker_video.cpp  spatial_object_tracker.cpp
depthnativelib/src/main/cpp/depthai-core/examples/Script/: script_camera_control.cpp  script_change_pipeline_flow.cpp  script_forward_frames.cpp  script_get_device_info.cpp  script_get_ip.cpp  script_http_client.cpp  script_http_server.cpp  script_json_communication.cpp  script_mjpeg_server.cpp  script_nndata_example.cpp  script_read_calibration.cpp
depthnativelib/src/main/cpp/depthai-core/examples/SpatialDetection/: spatial_calculator_multi_roi.cpp  spatial_location_calculator.cpp  spatial_mobilenet.cpp  spatial_mobilenet_mono.cpp  spatial_tiny_yolo.cpp
depthnativelib/src/main/cpp/depthai-core/examples/StereoDepth/: depth_crop_control.cpp  depth_post_processing.cpp  depth_preview.cpp  rgb_depth_aligned.cpp  rgb_depth_confidence_aligned.cpp  stereo_depth_video.cpp
depthnativelib/src/main/cpp/depthai-core/examples/SystemLogger/: system_information.cpp
depthnativelib/src/main/cpp/depthai-core/examples/VideoEncoder/: disparity_encoding.cpp  encoding_max_limit.cpp  mjpeg_encoding_example.cpp  rgb_encoding.cpp  rgb_full_resolution_saver.cpp  rgb_mono_encoding.cpp
depthnativelib/src/main/cpp/depthai-core/examples/Warp/: warp_mesh.cpp
depthnativelib/src/main/cpp/depthai-core/examples/Yolo/: tiny_yolo.cpp
depthnativelib/src/main/cpp/depthai-core/examples/bootloader/: bootloader_config.cpp  bootloader_version.cpp  flash_boot_header.cpp  flash_bootloader.cpp  flash_user_bootloader.cpp  poe_set_ip.cpp  read_flash_memory.cpp  write_flash_memory.cpp
depthnativelib/src/main/cpp/depthai-core/examples/calibration/: calibration_dump.cpp  calibration_factory_reset.cpp  calibration_flash.cpp  calibration_flash_v5.cpp  calibration_load.cpp  calibration_reader.cpp
depthnativelib/src/main/cpp/depthai-core/examples/cmake/: ExecuteTestTimeout.cmake
depthnativelib/src/main/cpp/depthai-core/examples/host_side/: device_information.cpp  device_logging.cpp  device_queue_event.cpp  opencv_support.cpp  queue_add_callback.cpp
depthnativelib/src/main/cpp/depthai-core/shared/: depthai-bootloader-shared.cmake  depthai-shared.cmake
depthnativelib/src/main/cpp/depthai-core/tests/: CMakeLists.txt
depthnativelib/src/main/cpp/libusb/: .gitignore  CMakeLists.txt
depthnativelib/src/main/cpp/libusb/cmake/: template_config.h
depthnativelib/src/main/cpp/libusb/libusb/: libusb-1.0d.def
(+25510 files in other folders)
